added in new version, reformated index pages, and added in the prototype change log

--- a/app/views/index-v2.html
+++ b/app/views/index-v2.html
@@ -4,7 +4,7 @@
 Waste carrier prototype
 {% endblock %}
 
-{% set versionxxx = "v1" %}
+{% set versionxxx = "v2" %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
@@ -29,10 +29,9 @@ Waste carrier prototype
 
       <p><a href="/prototype-admin/clear-data">Clear permit data</a></p>
       <!-- user lab -->
-      <h2 class="govuk-heading-m">Version 1</h2>
-
-      <p class="govuk-body">This version covers registrations, the renewal journey happy path via magic link, as well as the reminder renewal journeys*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
-      <p class="govuk-body">The sprint is 39, week starting 8 June 2020. <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
+      <h2 class="govuk-heading-m">Version 2</h2>
+      <p class="govuk-body">This version covers registrations, the renewal journey happy path via magic link, as well as version 2 final reminder renewal journeys*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
+      <p class="govuk-body">The sprint is 40, week starting 22 June 2020. <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <!-- ########################################################################### -->
