v2 bug fixes with version xx replaced with folder as per variable, and the tier page updated to display for both new reg and renewal with conditional content.

--- a/app/views/v2/wcr-magic-link/email-renew.html
+++ b/app/views/v2/wcr-magic-link/email-renew.html
@@ -51,7 +51,7 @@
         <p>It costs £105 and lasts for 3 years.
         </p>
         <h2 class="govuk-heading-s">You can renew online in a few minutes at:</br>
-        <a href="/{{versionxxx}}/your-registration/about-to-renew.html" target="_blank">wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
+        <a href="/{{folder}}/your-registration/about-to-renew.html" target="_blank">wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
       </h2>
 
       <p>Registration number: CBDU130776</br></br>
