--- a/app/views/v2/your-registration/check-details.html
+++ b/app/views/v2/your-registration/check-details.html
@@ -65,7 +65,7 @@
             <p class="govuk-!-padding-bottom-4">
               You do not pay VAT on these costs.
             </p>
-            <a href="/{{versionxxx}}/your-registration/choose-country">
+            <a href="/{{folder}}/your-registration/choose-country">
               <button class="govuk-button" data-module="govuk-button">
                 Continue
               </button>
