--- a/app/views/v2/your-registration/about-to-renew.html
+++ b/app/views/v2/your-registration/about-to-renew.html
@@ -21,7 +21,6 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-          <fieldset class="govuk-fieldset govuk-!-margin-bottom-9">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-7">
                 You are about to renew registration CBDU130776
@@ -48,11 +47,18 @@
                         if your Companies House number has changed
                     </li>
                 </ul>
-              <a href="/{{versionxxx}}/your-registration/check-details">
-                <button class="govuk-button" data-module="govuk-button">
-              Continue
-            </button></a>
-    </div>
-  </div>
+                <form action="/{{folder}}/your-registration/check-details" method="post">
+
+                  <div class="govuk-form-group">
+
+                    <div class="govuk-form-group">
+                      {{ govukButton({
+                          text: "Continue"
+                        }) }}
+                    </div>
+                </div>
+                </form>
+              </div>
+            </div>
 
 {% endblock %}
