--- a/app/views/v2/your-registration/registration-holder.html
+++ b/app/views/v2/your-registration/registration-holder.html
@@ -34,8 +34,8 @@ What type of business or organisation are you?
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-   <!--   <form action="/{{folder}}/your-registration/registration-type" method="post">-->
-        <form action="{{formAction}}" method="post">
+   <form action="/{{folder}}/your-registration/registration-type" method="post">
+
 
                 <div class="govuk-form-group">
 
