updates to routes to resolve routing bugs updates to a couple of incorrect page titles added page part way through for addingrenewal code

--- a/app/views/v2/your-registration/done/bacs-confirm.html
+++ b/app/views/v2/your-registration/done/bacs-confirm.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What type of business or organisation are you?
+You must now pay by bank transfer
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
