--- a/app/views/v2/your-registration/done/worldpay-confirm.html
+++ b/app/views/v2/your-registration/done/worldpay-confirm.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What type of business or organisation are you?
+Registration complete
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
