--- a/app/views/v2/your-registration/comp-name.html
+++ b/app/views/v2/your-registration/comp-name.html
@@ -28,6 +28,8 @@ What's the name of the company?
     {% set appType = 'no' %}
 {% endif %}
 
+{# permit|dump #}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
