updating routes and form so that company number isn't a CBU number, which is a bug I just introduced when trying to replace CBU numbers

--- a/app/views/v2/your-registration/comp-no.html
+++ b/app/views/v2/your-registration/comp-no.html
@@ -49,13 +49,13 @@ What's the registration number of the company?
             </label>
             <p class="govuk-hint">An 8 digit number, or 2 letters followed by a 6 digit number</p>
 
-          {% if permit.companyNumber=="CBDU334955" %}
+          {% if permit.companyNumber=="10659975" %}
 
-          <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text" value="CBDU334955" />
+          <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text" value="10659975">
 
           {% else %}
 
-          <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text" />
+          <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text">
 
           {% endif %}
 
