--- a/app/views/v2/your-registration/renew-code.html
+++ b/app/views/v2/your-registration/renew-code.html
@@ -31,7 +31,7 @@ What is the two part renewal code from your letter?
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/{{folder}}/your-registration/about-to-renew" method="post">
+    <form action="/{{folder}}/magic" method="post">
 
 
       <fieldset class="govuk-fieldset">
