--- a/app/views/v2/your-registration/new-registration.html
+++ b/app/views/v2/your-registration/new-registration.html
@@ -24,7 +24,7 @@ Is this a new registration?
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/{{folder}}/your-registration/letter" method="post">
+    <form action="{{formAction}}" method="post">
 
     <div class="govuk-form-group">
 
