added new letters, replaced the pdfs for the receipt, updated payment amounts across the payment journey to exclude the change carrier charge

--- a/app/views/index-v2.html
+++ b/app/views/index-v2.html
@@ -78,7 +78,9 @@ Waste carrier prototype
           <h3 class="govuk-heading-s">Version 3</h3>
           <p class="govuk-hint">Url in the letter does not go to the prototype, we decided to start testing with the exact url the user would use for live</p>    
           <ul class="govuk-list govuk-list--bullet"> 
-            <li>TBC</li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/letterv3-1.pdf" target="_blank" download="Renewal letter renewal code">Renewal letter renewal code</a> </li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/letterv3-2.pdf" target="_blank" download="Renewal letter magic link">Renewal letter magic link</a> </li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/letterv3-3.pdf" target="_blank" download="Letter check email">Renewal letter check email</a></li>
           </ul>
           <h3 class="govuk-heading-s">Version 2</h3>
           <p class="govuk-hint">The urls in these letters are now out of date, since adding in versioning (i.e '/v2/') but seeing as they will no longer be user tested I have not updated.</p>
