updates to the index page to include testing link and info for renewal from registration

--- a/app/views/index-v2.html
+++ b/app/views/index-v2.html
@@ -42,10 +42,11 @@ Waste carrier prototype
       
 
           <h3 class="govuk-heading-s">
-            Upper tier renewal magic link - after email with dummy session data
+            Upper tier renewal - with dummy session data
           </h3>
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/{{versionxxx}}/magic" target="_blank">WCR magic link renewal</a> </li>
+            <li><a href="/{{versionxxx}}/magic" target="_blank">WCR magic link renewal - after email</a> </li>
+            <li><a href="/{{versionxxx}}/your-registration/start-page" target="_blank">Renewal from start page</a> </li>
           </ul>
 
           <h3 class="govuk-heading-s">
