content changes to letter and check email pages in renewal final reminder flow, as well as confirm renewal page to not include carrier change charge

--- a/app/views/v2/your-registration/check-email.html
+++ b/app/views/v2/your-registration/check-email.html
@@ -34,7 +34,7 @@ Check your email inbox and junk mail for a renewal email
         </legend>
      <p>You may have received an email with a link that takes you to your renewal.</p>
      
-     <p>The email would be from <a href="mailto:no-reply@environment-agency.gov.uk">no-reply@environment-agency.gov.uk</a>.</p>
+     <p>The email would be from <a href="mailto:registrations@wastecarriersregistration.service.gov.uk">registrations@wastecarriersregistration.service.gov.uk</a>.</p>
      
       </fieldset>
 </br></br>
