--- a/app/views/v2/your-registration/confirm-renewal-details.html
+++ b/app/views/v2/your-registration/confirm-renewal-details.html
@@ -35,9 +35,9 @@ Confirmation of your renewal so far
       </br>
         <p>Based on what you've told us so far, you still need an upper tier registration.</p>
         <p>The renewal charge for CBDU334955 will be £105.</p>
+        <p>Your carrier type has not changed, so there is no extra charge.</p>
         <!--<p>Your carrier type has not changed, so there is no extra charge.</p>-->
-        <p>Because your carrier type has changed, there will also be a £40 charge.</p>
-        <p>The total charge to renew CBDU334955 is £145.</p>
+        <p>The total charge to renew CBDU334955 is £105.</p>
       
       </fieldset>
     </br>
