--- a/app/views/v2/your-registration/letter.html
+++ b/app/views/v2/your-registration/letter.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Did you receive a letter containing an 8-digit renewal code?
+Have you received a letter containing an 8-digit renewal code?
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
@@ -34,7 +34,7 @@ Did you receive a letter containing an 8-digit renewal code?
         name: "letter",
 fieldset: {
   legend: {
-    text: "Did you receive a letter containing an 8-digit renewal code?",
+    text: "Have you received a letter containing an 8-digit renewal code?",
     classes: "govuk-fieldset__legend--l"
   }
 },
@@ -58,10 +58,9 @@ items: [
       I do not know</span>
   </summary>
   <div class="govuk-details__text">
-    <p>The letter includes a box with 4 steps.</p> 
-    <p>Step 2 contains your 8-digit renewal code.</p>
+    <p>The letter starts with ‘You must renew your waste carrier registration’.</p>
     <p>If you no longer have the letter try searching your email for the renewal email, which should have a link directly to your renewal online.</p>
-    <p>If you cannot find either the letter or the email, call the Environment Agency helpline on 03708 506506 (Monday to Friday, 8am to 6pm) or email <a href="mailto:nccc-carrierbroker@environment-agency.gov.uk">nccc-carrierbroker@environment-agency.gov.uk</a></p>
+    <p>If you cannot find either the letter or the email, call the Environment Agency helpline on 03708 506506 (Monday to Friday, 8am to 6pm) or email <a href="mailto:registrations@wastecarriersregistration.service.gov.uk">registrations@wastecarriersregistration.service.gov.uk</a></p>
     
   </div>
 </details>
