updates to the renewal flow following queries in RUBY-1126

--- a/app/views/v2/your-registration/letter.html
+++ b/app/views/v2/your-registration/letter.html
@@ -60,7 +60,7 @@ items: [
   <div class="govuk-details__text">
     <p>The letter starts with ‘You must renew your waste carrier registration’.</p>
     <p>If you no longer have the letter try searching your email for the renewal email, which should have a link directly to your renewal online.</p>
-    <p>If you cannot find either the letter or the email, call the Environment Agency helpline on 03708 506506 (Monday to Friday, 8am to 6pm) or email <a href="mailto:registrations@wastecarriersregistration.service.gov.uk">registrations@wastecarriersregistration.service.gov.uk</a></p>
+    <p>If you cannot find either the letter or the email, call the Environment Agency helpline on 03708 506506 (Monday to Friday, 8am to 6pm) or email <a href="mailto:nccc-carrierbroker@environment-agency.gov.uk">nccc-carrierbroker@environment-agency.gov.uk</a></p>
     
   </div>
 </details>
