--- a/app/views/v2/your-registration/renew-code-error.html
+++ b/app/views/v2/your-registration/renew-code-error.html
@@ -34,26 +34,42 @@ What is the two part renewal code from your letter?
     <form action="/{{folder}}/magic" method="post">
 
 
-      <fieldset class="govuk-fieldset">
+
+          <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+              There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+              <ul class="govuk-list govuk-error-summary__list">
+                <li>
+                  <a href="#passport-issued-error">We don't recognise that code, please try again.</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <fieldset class="govuk-fieldset">
+            <div class="govuk-form-group govuk-form-group--error">
+              
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">
             What is the 8-digit renewal code from your letter?
           </h1>
         </legend>
       
-        <div class="govuk-form-group">
           <label class="govuk-label" for="companyName">
             <span class="govuk-hint">Example: 3h2s - 67k9</span></label>
 
           
-
-          <input class="govuk-input govuk-!-width-one-half" id="renewCode" name="renewCode" type="text">
+            <span id="passport-issued-error" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> We don't recognise that code, please try again.
+            </span>
+          <input class="govuk-input govuk-!-width-one-half govuk-input--error" id="renewCode" name="renewCode" type="text">
         </br>        </br>
   
         </div>
       
       </fieldset>
-
+     
         <div class="govuk-form-group">
       {{ govukButton({
           text: "Continue"
@@ -62,13 +78,6 @@ What is the two part renewal code from your letter?
 
   </form>
 
-</br>
-</br></br>
-</br></br>
-</br></br>
-</br></br>
-
-<p><a href="/{{folder}}/your-registration/renew-code-error">Error page for testing</a></p>
   </div>
 </div>
 
