updated don't to do not on error page for renewal link

--- a/app/views/v2/your-registration/renew-code-error.html
+++ b/app/views/v2/your-registration/renew-code-error.html
@@ -42,7 +42,7 @@ What is the two part renewal code from your letter?
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-                  <a href="#passport-issued-error">We don't recognise that code, please try again.</a>
+                  <a href="#passport-issued-error">We do not recognise that code, please try again.</a>
                 </li>
               </ul>
             </div>
@@ -61,7 +61,7 @@ What is the two part renewal code from your letter?
 
           
             <span id="passport-issued-error" class="govuk-error-message">
-              <span class="govuk-visually-hidden">Error:</span> We don't recognise that code, please try again.
+              <span class="govuk-visually-hidden">Error:</span> We do not recognise that code, please try again.
             </span>
           <input class="govuk-input govuk-!-width-one-half govuk-input--error" id="renewCode" name="renewCode" type="text">
         </br>        </br>
