--- a/app/views/v2/your-registration/done/bacs-confirm.html
+++ b/app/views/v2/your-registration/done/bacs-confirm.html
@@ -15,7 +15,7 @@ You must now pay by bank transfer
     </span>
   </p>
 </div>
-<a href="javascript:history.back();" class="govuk-back-link">Back</a>
+<!--<a href="javascript:history.back();" class="govuk-back-link">Back</a>-->
 {% endblock %}
 {% block content %}
 
