--- a/app/views/v2/your-registration/done/worldpay-confirm.html
+++ b/app/views/v2/your-registration/done/worldpay-confirm.html
@@ -15,7 +15,7 @@ Registration complete
     </span>
   </p>
 </div>
-<a href="javascript:history.back();" class="govuk-back-link">Back</a>
+<!--<a href="javascript:history.back();" class="govuk-back-link">Back</a>-->
 {% endblock %}
 {% block content %}
 
