--- a/app/views/index-v2.html
+++ b/app/views/index-v2.html
@@ -29,7 +29,7 @@ Waste carrier prototype
 
       <p><a href="/prototype-admin/clear-data">Clear permit data</a></p>
       <!-- user lab -->
-      <h2 class="govuk-heading-m">Version 2</h2>
+      <h2 class="govuk-heading-m">Version 2 test</h2>
       <p class="govuk-body">This version covers registrations, the renewal journey happy path via magic link, as well as version 2 final reminder renewal journeys*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
       <p class="govuk-body">The sprint is 40, week starting 22 June 2020. <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
 
