--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,6 +42,8 @@
       <ul class="govuk-list govuk-list--bullet">
     <li><a href="/index-v1">Version 1</a></li>
     <li><a href="/index-v2">Version 2</a></li>
+    <li><a href="/index-v3">Version 3</a></li>
+
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
