added data redirect then commented out as the flow isn't yet ready

--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -30,7 +30,7 @@ Waste carrier prototype
       <p><a href="/prototype-admin/clear-data">Clear permit data</a></p>
       <!-- user lab -->
       <h2 class="govuk-heading-m">Version 3</h2>
-      <p class="govuk-body">This version covers registrations, the renewal journey happy path via magic link, as well as version 2 final reminder renewal journeys*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
+      <p class="govuk-body">This version also covers registrations, the renewal journey happy path via magic link, as well as version 2 final reminder renewal journeys*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
       <p class="govuk-body">The sprint is 41, week starting 9 July 2020. <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -46,7 +46,7 @@ Waste carrier prototype
           </h3>
           <ul class="govuk-list govuk-list--bullet">
             <li><a href="/{{versionxxx}}/magic" target="_blank">WCR magic link renewal - after email</a> </li>
-            <li><a href="/{{versionxxx}}/your-registration/start-page" target="_blank">Renewal from start page</a> </li>
+            <!--<li><a href="/{{versionxxx}}/your-registration/start-page" target="_blank">Renewal from start page</a> </li>-->
           </ul>
 
           <h3 class="govuk-heading-s">
@@ -59,7 +59,7 @@ Waste carrier prototype
           <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="/{{versionxxx}}/upper-tier-reg">Upper tier registration</a></li>
             <li><a href="/{{versionxxx}}/lower-tier-reg">Lower tier registration</a></li>
-            <li><a href="/{{versionxxx}}/upper-tier-renewal">Renewal</a></li>
+            <!--<li><a href="/{{versionxxx}}/upper-tier-renewal">Renewal</a></li>-->
           </ul>
           
 
@@ -70,6 +70,7 @@ Waste carrier prototype
           <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="/{{versionxxx}}/renewal-confirm-page">WCR renewal card payment receipt, from 'done' page</a></li>
             <li><a href="/{{versionxxx}}/renewal-choose-payment">BACS renewal from payment summary</a></li>
+           <!--<li><a href="/{{versionxxx}}/worldpay-payment-flow">Worldpay payment summary flow from 'Done' page</a></li>-->
           </ul>
           
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
