--- a/app/views/v3/your-registration/done/worldpay-confirm.html
+++ b/app/views/v3/your-registration/done/worldpay-confirm.html
@@ -35,6 +35,7 @@ Registration complete
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation3">
+
           <h1 class="govuk-panel__title">
             Registration complete
           </h1>
@@ -44,7 +45,7 @@ Registration complete
             <br><strong>CBDU334955</strong>
           </div>
         </div>
-
+        {# permit|dump #}
         <p>We’ve sent a registration confirmation and certificate to {{permit.contactEmail}}.</p>
 
         {% if permit.receiptEmail=="" %}
