updated the choose payment page for conditional card payment info

--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -70,7 +70,7 @@ Waste carrier prototype
           <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="/{{versionxxx}}/renewal-confirm-page">WCR renewal card payment receipt, from 'done' page</a></li>
             <li><a href="/{{versionxxx}}/renewal-choose-payment">BACS renewal from payment summary</a></li>
-           <!--<li><a href="/{{versionxxx}}/worldpay-payment-flow">Worldpay payment summary flow from 'Done' page</a></li>-->
+           <li><a href="/{{versionxxx}}/worldpay-payment-flow">Worldpay payment summary flow from 'Done' page</a></li>
           </ul>
           
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
