--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -30,7 +30,7 @@ Waste carrier prototype
       <p><a href="/prototype-admin/clear-data">Clear permit data</a></p>
       <!-- user lab -->
       <h2 class="govuk-heading-m">Version 3</h2>
-      <p class="govuk-body">This version also covers registrations, the renewal journey happy path via magic link, as well as version 2 final reminder renewal journeys*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
+      <p class="govuk-body">This version covers everything from version 2, and a new flow for card payment confirmations, which will be the stop gap solution before we can build the receipt for payment flow*.</br></br>*This version only covers Limited Companies, and does not include the smart answers <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
       <p class="govuk-body">The sprint is 41, week starting 9 July 2020. <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -39,37 +39,13 @@ Waste carrier prototype
           <h2 class="govuk-heading-m">
             Current research
           </h2>
-      
-
-          <h3 class="govuk-heading-s">
-            Upper tier renewal - with dummy session data
-          </h3>
-          <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/{{versionxxx}}/magic" target="_blank">WCR magic link renewal - after email</a> </li>
-            <!--<li><a href="/{{versionxxx}}/your-registration/start-page" target="_blank">Renewal from start page</a> </li>-->
-          </ul>
-
-          <h3 class="govuk-heading-s">
-            Registration (limited company only)
-          </h3>
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/your-registration/start-page">WCR registration from the start page</a></li>
-          </ul>
-          <p style="font-weight: bold;">Dummy data links to check your answers</p>
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/upper-tier-reg">Upper tier registration</a></li>
-            <li><a href="/{{versionxxx}}/lower-tier-reg">Lower tier registration</a></li>
-            <!--<li><a href="/{{versionxxx}}/upper-tier-renewal">Renewal</a></li>-->
-          </ul>
-          
 
           <h3 class="govuk-heading-s">
             Dummy data links to payment flows
           </h3>
 
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/renewal-confirm-page">WCR renewal card payment receipt, from 'done' page</a></li>
-            <li><a href="/{{versionxxx}}/renewal-choose-payment">BACS renewal from payment summary</a></li>
+            <li><a href="/{{versionxxx}}/renewal-choose-payment">WCR renewal card payment receipt, from 'Done' page</a></li>
            <li><a href="/{{versionxxx}}/worldpay-payment-flow">Worldpay payment summary flow from 'Done' page</a></li>
           </ul>
           
@@ -77,31 +53,14 @@ Waste carrier prototype
           <!-- ########################################################################### -->
     
           <h2 class="govuk-heading-m">Letters</h2>
-          <h3 class="govuk-heading-s">Version 3</h3>
+          <h3 class="govuk-heading-s">Version 4</h3>
           <p class="govuk-hint">Url in the letter does not go to the prototype, we decided to start testing with the exact url the user would use for live</p>    
+ 
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/letterv3-1.pdf" target="_blank" download="Renewal letter renewal code">Renewal letter renewal code</a> </li>
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/letterv3-2.pdf" target="_blank" download="Renewal letter magic link">Renewal letter magic link</a> </li>
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/letterv3-3.pdf" target="_blank" download="Letter check email">Renewal letter check email</a></li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/renewal-letter-v4.pdf" target="_blank" download="Renewal letter renewal code">Renewal letter</a></li>
+            <li><a href="/{{versionxxx}}/magic" target="_blank">Renewal flow following the letter</a></li>
           </ul>
-          <h3 class="govuk-heading-s">Version 2</h3>
-          <p class="govuk-hint">The urls in these letters are now out of date, since adding in versioning (i.e '/v2/') but seeing as they will no longer be user tested I have not updated.</p>
-          <p class="govuk-hint">The url in the letter would direct the user to <a href="waste-carriers.herokuapp.com/v1/renew/782gkd57bdjs84hf">waste-carriers.herokuapp.com/v1/renew/782gkd57bdjs84hf</a>       
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link-v2.pdf" target="_blank" download="Renewal letter magic link v2">Renewal letter magic link</a> </li>
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code-v2.pdf" target="_blank" download="Renewal letter QR v2">Renewal letter QR</a> </li>
-          </ul>     
-          <h3 class="govuk-heading-s">Version 1</h3>
-          <p class="govuk-hint">The urls in these letters are now out of date, since adding in versioning (i.e '/v2/') but seeing as they will no longer be user tested I have not updated.</p>
-          <p class="govuk-hint">The url in the letter would direct the user to <a href="waste-carriers.herokuapp.com/v1/renew/782gkd57bdjs84hf">waste-carriers.herokuapp.com/v1/renew/782gkd57bdjs84hf</a>       
-          <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link.pdf" target="_blank" download="Renewal letter magic link">Renewal letter magic link</a></li>
-
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/redirect.pdf" target="_blank" download="Renewal letter redirect">Renewal letter redirect</a> </li>
-
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code.pdf" target="_blank" download="Renewal letter redirect and QR cod">Renewal letter redirect and QR code</a></li>
-          </ul>
-
+        
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <!-- ########################################################################### -->
