--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -45,8 +45,8 @@ Waste carrier prototype
           </h3>
 
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="/{{versionxxx}}/renewal-choose-payment">WCR renewal card payment receipt, from 'Done' page</a></li>
-           <li><a href="/{{versionxxx}}/worldpay-payment-flow">Worldpay payment summary flow from 'Done' page</a></li>
+            <li><a href="/{{versionxxx}}/upper-tier-renewal">Renewal payment receipt, from check your answers (preferred)</a></li>
+           <li><a href="/{{versionxxx}}/worldpay-payment-flow">Renewal Worldpay (only) from choose payment page (in budget/capacity)</a></li>
           </ul>
           
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
