updates to the index page again for clearer journey

--- a/app/views/index-v3.html
+++ b/app/views/index-v3.html
@@ -57,7 +57,7 @@ Waste carrier prototype
           <p class="govuk-hint">Url in the letter does not go to the prototype, we decided to start testing with the exact url the user would use for live</p>    
  
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/renewal-letter-v4.pdf" target="_blank" download="Renewal letter renewal code">Renewal letter</a></li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/renewal-letter-v4.pdf" target="_blank" download="Renewal letter check email">Renewal letter</a></li>
             <li><a href="/{{versionxxx}}/magic" target="_blank">Renewal flow following the letter</a></li>
           </ul>
         
